# tkjug

./: README.md  darksample.py  darkstylesheet.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml
tests/: test_table.py  test_tk.py  test_towfile.py
tkjug/: _kamisato.py  _plot.py  app.py  db.py  hall.py  hall_kamisato.py  hall_kuragano.py  halls.py  kamisato.py  kuragano.py  models.py  plot.py  table.py  tkapp.py  useredis.py
