[metadata]
name = jug
version = 0.0.1
description = Juggler Monitoring
license = MIT License
author = aki
author_email = aki666@gmail.com
classifiers =
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11

[options]
packages = find:
install_requires =
  matplotlib
  pandas
  tqdm
  scipy
  redis
  opencv-python
  pytesseract
  ttkthemes
  pymongo
  google-api-python-client
  google-auth-httplib2
  google-auth-oauthlib

[options.extras_require]
dev =
  pytest
  flake8
  mypy

[options.entry_points]
console_scripts =
  setjug = jug.useredis:setjug
  setjugall = jug.useredis:setjugall
  putjug = jug.useredis:putjug
